# projekt-1-josefK211

./: CMakeLists.txt  README.md
include/: Config.hpp  Firma.hpp  Gra.hpp  Kredyt.hpp  Pracownicy.hpp
src/: Firma.cpp  Gra.cpp  Kredyt.cpp  Pracownicy.cpp  main.cpp
